--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.17.5",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30",
     "karma": "^1.3.0",
     "mocha": "^3.1.2"
   },
